--- a/source/VotingApp/VotingApp/Views/Access/Index.cshtml
+++ b/source/VotingApp/VotingApp/Views/Access/Index.cshtml
@@ -31,7 +31,7 @@
 				<h5 class="text-center text-white">Cast A Vote <span data-toggle="tooltip" data-placement="bottom" title="If the poll is private only authorized users will be able to cast a vote.">&#8505;</span></h5>
 				<input id="submit-input" placeholder="Enter access code here" class="form-control mb-3" type="text" name="code" required minlength="6" maxlength="6"/>
 					<span class="input-group-btn">
-						<button type="submit" id="vote-submit" class="btn btn-primary">Submit</button>
+						<button type="submit" id="vote-submit" class="btn btn-light bg-success btn-outline-primary">Submit</button>
 					</span>
 			</form>
 		</div>
@@ -40,7 +40,7 @@
 				<h5 class="text-center text-white">Poll Results <span data-toggle="tooltip" data-placement="bottom" title="If the poll is private only authorized users will be able to access the poll results.">&#8505;</span></h5>
 				<input id="results-input" placeholder="Enter access code here" class="form-control mb-3" type="text" name="code" required minlength="6" maxlength="6"/>
 				<span class="input-group-btn">
-					<button type="submit" id="results-submit" class="btn btn-primary">Submit</button>
+					<button type="submit" id="results-submit" class="btn btn-light bg-success btn-outline-primary">Submit</button>
 				</span>
 			</form>
 		</div>
