--- a/source/VotingApp/VotingApp/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/source/VotingApp/VotingApp/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -9,12 +9,12 @@
     }
 }
 
-<h1>Manage your account</h1>
+<h1 class="text-white mt-4">Manage your account</h1>
 
 <div>
-    <h2>Change your account settings</h2>
-    <hr />
-    <div class="row">
+    <h3 class="text-white">Change your account settings</h3>
+    <hr class="mt-lg-3" style="border-top: 3px solid white; color: white; background-color: white;">
+    <div class="row mt-2">
         <div class="col-md-3">
             <partial name="_ManageNav" />
         </div>
