added BDD tests --for VA-242 --for VA-272

--- a/source/VotingApp/VotingApp/Views/Help/About.cshtml
+++ b/source/VotingApp/VotingApp/Views/Help/About.cshtml
@@ -9,7 +9,7 @@
 		                                                     right: 50%;
 		                                                     width: 100vw;">
 	<div class="container text-white">
-		<h1 class="display-4 pt-5">About Opiniony</h1>
+		<h1 id="page-title" class="display-4 pt-5">About Opiniony</h1>
 		<hr class="mt-lg-5" style="border-top: 3px solid white; color: white; background-color: white;">
 
 		<div class="row">
