--- a/source/VotingApp/VotingApp/Views/Access/SubmitVote.cshtml
+++ b/source/VotingApp/VotingApp/Views/Access/SubmitVote.cshtml
@@ -25,13 +25,13 @@
             @if (ViewBag.ErrorMessage != null)
             {
                 <div class="alert alert-danger">
-                    <p>@ViewBag.ErrorMessage</p>
+                    <p id="errorMessage">@ViewBag.ErrorMessage</p>
                 </div>
             }
             @if (Model.submittedVote != null)
             {
                 <div class="alert alert-warning">
-                    <p>You have already submitted your vote. Resubmitting a vote will overwrite your previous vote</p>
+                    <p id="updateMessage">You have already submitted your vote. Resubmitting a vote will overwrite your previous vote</p>
                 </div>
             }
             
