commit bdd test

--- a/source/VotingApp/VotingApp/Views/Create/CreatedVotesReview.cshtml
+++ b/source/VotingApp/VotingApp/Views/Create/CreatedVotesReview.cshtml
@@ -76,7 +76,7 @@
                                         <div class="modal-dialog" role="document">
                                             <div class="modal-content">
                                                 <div class="modal-body">
-                                                    <div class="row justify-content-center"><img class="rounded" style="max-width: 300px;" src="@Url.Action("LoadQR", new {id = createdVote.Id})" alt="test")><img/>
+                                                    <div class="row justify-content-center"><img id="VoteQR" class="rounded" style="max-width: 300px;" src="@Url.Action("LoadQR", new {id = createdVote.Id})" alt="test")><img/>
                                                         <button style="max-width: 300px;" type="button" class="btn btn-secondary mt-2" data-dismiss="modal">Close</button></div>
 
                                                 </div>
