fixed some ui stuff

--- a/source/VotingApp/VotingApp/Views/Access/Results.cshtml
+++ b/source/VotingApp/VotingApp/Views/Access/Results.cshtml
@@ -75,9 +75,9 @@
 			</div>
 		</div>
 	}
-	<div class="text-center mt-3">
+	<div class="text-center mt-3 mb-2">
 		<form asp-action="Index" method="get">
-			<td><button type="submit" id="back-button" style="width:140px !important" class="btn btn-light bg-success btn-outline-primary">Back to access a poll</button></td>
+			<td><button type="submit" id="back-button" style="width:140px !important" class="btn btn-light bg-success btn-outline-primary mb-2">Back to access a poll</button></td>
 		</form>
 	</div>
 </div>
