--- a/source/VotingApp/VotingApp/Views/Access/SubmitConfirmation.cshtml
+++ b/source/VotingApp/VotingApp/Views/Access/SubmitConfirmation.cshtml
@@ -36,7 +36,7 @@
         <h2>Your Choice:</h2>
         <h3 class="mb-5">@Model.votingOption.VoteOptionString</h3>
         <form asp-controller="Home" asp-action="Index">
-            <button type="submit" style="width:100px !important" class="btn btn-light btn-lg bg-success btn-outline-primary">Home</button>
+            <button type="submit" style="width:100px !important" class="btn btn-light btn-lg bg-success btn-outline-primary mb-2">Home</button>
         </form>
     </div>
     
