--- a/source/VotingApp/VotingApp/Views/Access/SubmitVote.cshtml
+++ b/source/VotingApp/VotingApp/Views/Access/SubmitVote.cshtml
@@ -63,10 +63,10 @@
             <span class="input-group-btn">
                 @if (Model.submittedVote != null)
                 {
-                    <button type="submit" id="edit-vote" class="mt-2 btn btn-primary">Submit</button>
+                    <button type="submit" id="edit-vote" class="mt-2 mb-2 btn btn-light bg-success btn-outline-primary">Submit</button>
                 } else
                 {
-                    <button type="submit" id="cast-vote" class="mt-2 btn btn-primary">Submit</button>
+                    <button type="submit" id="cast-vote" class="mt-2 mb-2 btn btn-light bg-success btn-outline-primary">Submit</button>
                 }
             </span>
         </div>
