--- a/source/VotingApp/VotingApp/Views/Create/AddVoteUsers.cshtml
+++ b/source/VotingApp/VotingApp/Views/Create/AddVoteUsers.cshtml
@@ -30,7 +30,7 @@
                             
                     </div>
              <div class="form-group pt-3">
-					<button type="submit" class="btn btn-light btn-lg bg-success btn-outline-primary">Review</button>
+					<button type="submit" class="btn btn-light btn-lg bg-success btn-outline-primary mb-2">Review</button>
 			</div>
             </div>
             </div>
