--- a/source/VotingApp/VotingApp/Views/Create/Confirmation.cshtml
+++ b/source/VotingApp/VotingApp/Views/Create/Confirmation.cshtml
@@ -127,11 +127,11 @@
 			<div class="text-center col-md-8 mx-auto"> 
 				   <div class="col justify-content-center btn-group">
 						<form asp-action="BackToIndexPage">
-							<button type="submit" style="width:100px !important" class="btn btn-light btn-lg bg-success btn-outline-primary" value="@Model.ID" name="ID">Edit</button>
+							<button type="submit" style="width:100px !important" class="btn btn-light btn-lg bg-success btn-outline-primary mb-2" value="@Model.ID" name="ID">Edit</button>
 						</form>
 						&nbsp;&nbsp;
 						<form asp-action="Confirmation" method="post">
-							<button type="submit" style="width:100px !important" class="btn btn-light btn-lg bg-success btn-outline-primary">Submit</button>
+							<button type="submit" style="width:100px !important" class="btn btn-light btn-lg bg-success btn-outline-primary mb-2">Submit</button>
 						</form>
 					</div>
 			</div>
