--- a/source/VotingApp/VotingApp/Views/Create/CreatedVotesReview.cshtml
+++ b/source/VotingApp/VotingApp/Views/Create/CreatedVotesReview.cshtml
@@ -192,7 +192,7 @@
 			    </div>
 		    </div>
 		    @*multi-round votes table*@
-		    <div class="row text-center m-2">
+		    <div class="row text-center m-2 mb-2">
 			    <div class="table-responsive">
 				    <h3>Multi-Round Polls:</h3>
 				    <table class="table table-borderless rounded bg-dark text-white table-striped" id="accessTable">
