--- a/source/VotingApp/VotingApp/Views/Create/VoteResults.cshtml
+++ b/source/VotingApp/VotingApp/Views/Create/VoteResults.cshtml
@@ -155,7 +155,7 @@
 	}
 	<div class="text-center mt-3 mb-2">
 		<form asp-action="CreatedVotesReview" method="get">
-			<td><button type="submit" style="width:140px !important" class="btn btn-light bg-success btn-outline-primary">Back to Poll Review</button></td>
+			<td><button type="submit" style="width:140px !important" class="btn btn-light bg-success btn-outline-primary mb-2">Back to Poll Review</button></td>
 		</form>
 	</div>
 </div>
